fixing spacing of the checkmark on list views

--- a/src/Components/Common/List/ListView.less
+++ b/src/Components/Common/List/ListView.less
@@ -28,7 +28,7 @@
   }
 
   .list-group-item-content {
-    margin-left: 5px;
+    padding-left: 5px;
     width: 100%;
   }
 
